custom TOC horizontal scroll bar fix

--- a/eplayer/src/routes/ETBook/components/Book.scss
+++ b/eplayer/src/routes/ETBook/components/Book.scss
@@ -77,3 +77,14 @@ $cont-padding-bottom: 85px;
     height: 1px;
     overflow: hidden;
 }
+
+//For custom TOC
+.ConfigureToc {
+    width: 380px !important;
+    .tocContents {
+            width:100% !important;
+        .publishContainer {
+      margin-right:20px !important;
+      }
+    }
+  }
